--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             width: 100%; aspect-ratio: 16/10;
             position: relative; z-index: 2; overflow: hidden;
             /* C'EST ICI QUE VOUS METTREZ VOTRE SCREENSHOT */
-            background-image: url('assets/screenshot.jpg'); 
+            background-image: url('./screenshot.jpg'); 
             background-size: cover; background-position: center;
             display: flex; align-items: center; justify-content: center;
         }
@@ -115,7 +115,7 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <img src="https://via.placeholder.com/64/646cff/ffffff?text=A" alt="Logo AutoRepurpose">
+                <img src="./logo.png." alt="Logo AutoRepurpose">
                 Auto<span>Repurpose</span>
             </div>
             <div class="nav-links">
